COMMENTARIZED whole springboot backend